Add metadata transformation for DescribeTopicPartitionsRequest [INK-57] (#113)